# wildcard

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  manage.py  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
semaphore/: exceptions.py  policy.py  settings.py  urls.py
semaphore/api/: __init__.py  base.py  keystone.py  payload.py
semaphore/dashboards/admin/: dashboard.py
semaphore/dashboards/admin/domains/: panel.py  tables.py  tests.py  urls.py  views.py  workflows.py
semaphore/dashboards/admin/groups/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
semaphore/dashboards/admin/info/: panel.py  tabs.py  urls.py  views.py
semaphore/dashboards/admin/projects/: panel.py  tables.py  tests.py  urls.py  views.py  workflows.py
semaphore/dashboards/admin/roles/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
semaphore/dashboards/admin/users/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
semaphore/dashboards/project/: dashboard.py
semaphore/dashboards/project/queues/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
semaphore/dashboards/settings/password/: forms.py  panel.py  tests.py  urls.py  views.py
semaphore/dashboards/settings/user/: panel.py  tests.py  urls.py  views.py
semaphore/openstack/common/: excutils.py  fileutils.py  gettextutils.py  jsonutils.py  log.py  policy.py
semaphore/test/: helpers.py  settings.py
semaphore/test/test_data/: exceptions.py  keystone_data.py  payload_data.py  utils.py
semaphore/wsgi/: django.wsgi
tools/: install_venv.py
wildcard/: forms.py  policy.py  settings.py  tests.py  urls.py  views.py
wildcard/api/: __init__.py  keystone.py  payload.py  ripcord.py
wildcard/dashboards/admin/: dashboard.py
wildcard/dashboards/admin/domains/: panel.py  tables.py  tests.py  urls.py  views.py  workflows.py
wildcard/dashboards/project/: dashboard.py
wildcard/local/: local_settings.py.example
wildcard/openstack/common/: excutils.py  fileutils.py  gettextutils.py  jsonutils.py  log.py  policy.py
wildcard/templates/: _forgot-username.html  _stylesheets.html  forgot-username.html  splash.html
wildcard/templates/auth/: _login.html
wildcard/test/: helpers.py  settings.py
wildcard/test/test_data/: exceptions.py  keystone_data.py  payload_data.py  ripcord_data.py  utils.py
wildcard/wsgi/: django.wsgi
(+78 files in other folders)
