[metadata]
name = wildcard
summary = wildcard
description-file =
    README.rst
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
home-page = https://github.com/kickstandproject/wildcard
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[compile_catalog]
directory = wildcard/locale
domain = wildcard 

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = wildcard/locale/wildcard.pot

[files]
packages =
    wildcard

[nosetests]
detailed-errors=1
verbosity=2

[pbr]
warnerrors = True

[update_catalog]
domain = wildcard 
output_dir = wildcard/locale
input_file = wildcard/locale/wildcard.pot

[upload_sphinx]
upload-dir = doc/build/html
